--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       .sticky-summary {
         position: sticky;
-        /* top 由配置计算 */
+        top: var(--summary-height, 30px);
         background-color: #e6f7ff;
         z-index: 99;
       }
@@ -65,6 +65,13 @@
         will-change: transform;
       }
 
+      /* 虚拟行的绝对定位 */
+      .virtual-row {
+        position: absolute;
+        width: 100%;
+        height: var(--row-height, 20px);
+      }
+
       .page-indicator {
         margin-top: 10px;
         color: #666;
@@ -76,6 +83,6 @@
     <h2>千万数据分页虚拟滚动</h2>
     <div id="container"></div>
     <div class="page-indicator" id="page-indicator">加载中...</div>
-    <script type="module" src="./main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
