--- a/test-panel.html
+++ b/test-panel.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>面板系统测试</title>
+  <title>阶段0: 面板系统测试</title>
   <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
